[gd_scene load_steps=20 format=3 uid="uid://b1gqkf0bigllg"]

[ext_resource type="Script" uid="uid://bkpthlysrcq4u" path="res://game/scenes/dungeon/managers/item_manager.gd" id="1_8kubn"]
[ext_resource type="Script" uid="uid://x1d4c5ngb1lr" path="res://game/scenes/dungeon/dungeon.gd" id="1_83yuv"]
[ext_resource type="Script" uid="uid://igp70eo08xga" path="res://game/scenes/dungeon/managers/dungeon_manager.gd" id="1_vniqc"]
[ext_resource type="PackedScene" uid="uid://bjuonfevw8gma" path="res://game/entities/player/player.tscn" id="2_y60a4"]
[ext_resource type="PackedScene" uid="uid://bxolplnqqvryx" path="res://game/entities/items/potion/potion.tscn" id="3_8kubn"]
[ext_resource type="Texture2D" uid="uid://bq2qwlk1hmt53" path="res://assets/tiles/dungeon_tiles/floor_tiles.png" id="3_tm2xg"]
[ext_resource type="Texture2D" uid="uid://5jm54sej1gp6" path="res://assets/tiles/stone-wall-tile.png" id="4_7ut51"]
[ext_resource type="Script" uid="uid://b30sn3tyxwmak" path="res://game/scenes/dungeon/managers/enemy_manager.gd" id="6_i6pqt"]
[ext_resource type="Texture2D" uid="uid://d5p1wmkfvmpa" path="res://assets/kenney_tiny-dungeon/Tilemap/tilemap_packed.png" id="7_8vgq5"]
[ext_resource type="Script" uid="uid://vxn6rkgjkimw" path="res://game/scenes/dungeon/managers/fireball_manager.gd" id="7_ny0xj"]
[ext_resource type="Texture2D" uid="uid://cyanchcdp0imo" path="res://assets/tiles/Solaria Demo Tiles.png" id="8_mxv3y"]
[ext_resource type="PackedScene" uid="uid://b3dpf8m4ws27m" path="res://game/entities/ladder/ladder.tscn" id="10_iqd7g"]
[ext_resource type="PackedScene" uid="uid://bvxqy8r7n8kcj" path="res://game/ui/timer_display/timer_display.tscn" id="11_timer"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_epsnw"]
texture = ExtResource("3_tm2xg")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_epsnw"]
sources/0 = SubResource("TileSetAtlasSource_epsnw")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mxv3y"]
texture = ExtResource("7_8vgq5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dh8ns"]
texture = ExtResource("8_mxv3y")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
22:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
23:0/0 = 0
23:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
24:0/0 = 0
24:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
22:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
23:1/0 = 0
23:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
24:1/0 = 0
24:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
22:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
23:2/0 = 0
23:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
24:2/0 = 0
24:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
27:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
27:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
21:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
0:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sval7"]
resource_name = "Stone Wall"
texture = ExtResource("4_7ut51")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_qcasg"]
physics_layer_0/collision_layer = 2
sources/3 = SubResource("TileSetAtlasSource_sval7")
sources/0 = SubResource("TileSetAtlasSource_mxv3y")
sources/1 = SubResource("TileSetAtlasSource_dh8ns")

[node name="Dungeon" type="Node2D"]
script = ExtResource("1_83yuv")
floors = 1

[node name="Player" parent="." instance=ExtResource("2_y60a4")]
z_index = 10
position = Vector2(-2, 0)

[node name="UI" type="Control" parent="Player"]
z_index = 50
layout_mode = 3
anchors_preset = 0
offset_left = -306.0
offset_top = -173.0
offset_right = -266.0
offset_bottom = -133.0

[node name="Button" type="Button" parent="Player/UI"]
z_index = 50
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -15.5
offset_right = 27.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Pause"

[node name="TimerDisplay" parent="Player/UI" node_paths=PackedStringArray("dungeon_scene") instance=ExtResource("11_timer")]
z_index = 50
layout_mode = 1
offset_left = 453.0
offset_top = 3.0
offset_right = 573.0
offset_bottom = 43.0
dungeon_scene = NodePath("../../..")

[node name="Potion" parent="Player" instance=ExtResource("3_8kubn")]

[node name="DungeonManager" type="Node" parent="." node_paths=PackedStringArray("player", "ladder")]
script = ExtResource("1_vniqc")
player = NodePath("../Player")
ladder = NodePath("../Ladder")

[node name="FloorLayer" type="TileMapLayer" parent="DungeonManager"]
tile_set = SubResource("TileSet_epsnw")

[node name="WallLayer" type="TileMapLayer" parent="DungeonManager"]
tile_set = SubResource("TileSet_qcasg")

[node name="EnemyManager" type="Node" parent="." node_paths=PackedStringArray("dungeon_manager", "item_manager")]
script = ExtResource("6_i6pqt")
dungeon_manager = NodePath("../DungeonManager")
item_manager = NodePath("../ItemManager")

[node name="FireballManager" type="Node" parent="."]
script = ExtResource("7_ny0xj")

[node name="ItemManager" type="Node" parent="."]
script = ExtResource("1_8kubn")

[node name="Ladder" parent="." instance=ExtResource("10_iqd7g")]
z_index = 5

[node name="GameTimer" type="Timer" parent="."]

[connection signal="pressed" from="Player/UI/Button" to="." method="pause"]
[connection signal="enemy_died" from="EnemyManager" to="." method="enemy_died"]
[connection signal="body_entered" from="Ladder" to="." method="leave_dungeon_floor"]
